# metalflare

./: .LICENSE_INFO.md  .bumpversion.cfg  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CNAME  LICENSE.md  LICENSE_CODE.md  LICENSE_INFO.md  Makefile  README.md  conda-lock.yml  conf.py  environment.yml  index.md  mkdocs.yml  pixi.toml  pyproject.toml
.datalad/: config
.github/workflows/: deploy-docs.yml  deploy-website.yml  docs.yml  tests.yml
.obsidian/: .gitignore  app.json  community-plugins.json  graph.json  hotkeys.json
.obsidian/plugins/: .gitignore
.obsidian/plugins/citater/: data.json  manifest.json
.obsidian/plugins/obsidian-bibtex-adder/: data.json  main.js
01-management/: README.md
01-management/01-admin/: README.md
01-management/02-grants/: README.md
01-management/03-meetings/: README.md  YYYY-MM-DD-template.md
01-management/04-literature/: README.md
01-management/05-standards/: README.md
01-management/06-notebook/: README.md
02-methods/: README.md
02-methods/01-protocols/: README.md
02-methods/02-qmmm-protein-metal/: README.md  index.md
03-data/: README.md
03-data/000-template/: README.md
03-data/999-processed/: README.md
04-analysis/: README.md
04-analysis/000-template/: README.md
05-figures/: README.md
05-figures/000-template/: README.md
06-dissemination/: README.md
06-dissemination/01-reports/: README.md
06-dissemination/02-manuscripts/: README.md
06-dissemination/03-other/: README.md
07-misc/: README.md
docs/: gen_ref_pages.py  index.md
docs/01-management/: README.md
docs/02-methods/01-protocols/: README.md
docs/02-methods/02-qmmm-protein-metal/: 01-environment.md  02-protein-prep.md  README.md
docs/03-data/: README.md
docs/03-data/001-msgfp-apo/: .gitignore  README.md  protein-prep.sh
docs/04-analysis/: README.md
docs/05-figures/: README.md
docs/06-dissemination/: README.md
docs/06-dissemination/03-other/: README.md
docs/07-misc/: README.md
docs/css/: colors.css
docs/overrides/: main.html
docs/source/: environment.md  sop.md
docs/stylesheets/: extra.css
metalflare/: README.md  __init__.py  utils.py
metalflare/analysis/: figures.py  pdfs.py  pes.py  pls.py
metalflare/pdb/: structure.py  utils.py
metalflare/pdb/change/: names.py  numbering.py
metalflare/pdb/fix/: numbering.py
metalflare/pdb/modify/: names.py  numbering.py  orientation.py
metalflare/simulation/: contexts.py  environment.py  inspect.py  run.py
metalflare/simulation/amber/: contexts.py  run.py  tleap.py
metalflare/templates/: inspect_structure.vmd
study/: .pages  gen_ref_pages.py
study/.overrides/: main.html
study/01-management/01-admin/: README.md
study/01-management/02-grants/: README.md
study/01-management/03-meetings/: README.md
study/01-management/05-standards/: README.md
study/01-management/06-notebook/: README.md
study/02-methods/: 02 - Protein preparation from RCSB.md
study/02-methods/01-protocols/: gfp-definitions.md  inspect_structure.vmd
study/02-methods/02-qmmm-protein-metal/: 01-environment.md
study/03-data/001-rogfp-md/: .gitignore  01-protein-prep.sh  README.md  amber-prep.sh  run_tleap.py
study/03-data/999-processed/: README.md
study/04-analysis/000-template/: README.md
study/06-dissemination/01-reports/: README.md
study/06-dissemination/02-manuscripts/: README.md
study/analysis/001-rogfp-md/: index.md
study/analysis/003-rogfp-cu-md/: index.md
study/analysis/004-rogfp-oxd-md/: index.md
study/analysis/005-rogfp-glh-md/: index.md
study/analysis/006-rogfp-cu-glh-md/: index.md
study/analysis/007-rogfp-oxd-glh-md/: index.md
study/analysis/008-rogfp-na-glh-md/: index.md
study/analysis/009-pw-configs/: README.md
study/analysis/987-rogfp-cu-md-select/: index.md
study/analysis/989-rogfp-cu-md-clustering/: index.md  sim-features.md
study/css/: base.css
study/data/: README.md  prod-example.vmd
study/data/000-template/: README.md
study/data/001-rogfp-md/: .gitignore  README.md
study/data/002-cu(i)-positioning/: .gitignore  README.md
study/data/003-rogfp-cu-md/: .gitignore  README.md
study/data/004-rogfp-oxd/: .gitignore
study/data/004-rogfp-oxd-md/: README.md
study/data/005-rogfp-glh-md/: .gitignore  README.md
study/data/006-rogfp-cu-glh-md/: .gitignore  README.md
study/data/007-rogfp-oxd-glh-md/: README.md
study/data/008-rogfp-na-glh-md/: README.md
study/dissemination/manuscripts/: README.md
study/dissemination/other/: README.md
study/dissemination/reports/: README.md
study/figures/: .pages  README.md  run.sh
study/figures/001-cro66_oh-cys147_ca/: hist.py  index.md  pdf-info.md  pdf.py  pmf-info.md
study/figures/001-cro66_oh-cys147_ca-hist/: hist.py
study/figures/002-rogfp2-cro-rdf/: cro-rdf-plot.py  index.md
study/figures/002-rogfp2-cro66-rdf/: index.md
study/figures/003-cro66_oh-thr203_og1/: hist.py  index.md  pdf-info.md  pdf.py  pmf-info.md
study/figures/003-cro66_oh-thr203_og1-hist/: hist.py  index.md
study/figures/004-cro-tyr143-oh-hist/: cro-cym-hist.py
study/figures/004-cro65_oh-tyr143_oh-dist/: dist-hist.py
study/figures/004-cro66_oh-tyr145_oh/: index.md  pdf-info.md  pdf.py  pmf-info.md
study/figures/004-cro66_oh-tyr145_oh-hist/: hist.py  index.md
study/figures/005-cro66_oh-thr203_cg2/: hist.py  index.md  pdf-info.md  pdf.py  pmf-info.md
study/figures/005-cro66_oh-thr203_cg2-hist/: hist.py  index.md
study/figures/006-cro66_oh-thr203_hg1/: index.md  pdf-info.md  pdf.py  pmf-info.md
study/figures/006-cro66_oh-thr203_hg1-hist/: hist.py  index.md
study/figures/007-thr201-cym145-hist/: hist.py
study/figures/007-thr201_o-cym145_sg-hist/: hist.py
study/figures/007-thr203_o-cys147_sg-hist/: hist.py  index.md
study/jobs/: README.md
study/management/: .pages  README.md
study/methods/: 02 - Protein preparation from RCSB.md  02-protein-prep.md  03-amber-prep.md  README.md
tests/: conftest.py  test_amber_run_prep.py  test_environment.py  test_protein_prep.py  test_simulation_contexts.py  test_tleap.py
website/source/: environment.md  sop.md
(+1831 files in other folders)
