[tool.poetry]
name = "metalflare"
version = "0.0.0"
description = "Investigating metal-sensing green fluorescent protein"
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"
include = [
    "templates/",
]

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
loguru = "^0.7.2"
mdanalysis = "^2.6.1"
datalad = "^0.19.3"
datalad-osf = "^0.3.0"
pdb2pqr = "^3.6.1"
jinja2 = "^3.1.2"
zarr = "^2.16.1"
seaborn = "^0.13.1"
ray = "^2.9.1"
pymoo = "^0.6.1.1"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.0"
umap-learn = "^0.5.5"
ipykernel = "^6.29.3"
netcdf4 = "^1.6.5"
jupyterlab = "^4.2.2"
xgboost = "^2.1.1"

[tool.poetry.scripts]
metalflare-filter-pdb = "metalflare.pdb.utils:cli_filter_pdb"
metalflare-unify-resids = "metalflare.pdb.modify.numbering:cli_unify_resids"
metalflare-unify-waters = "metalflare.pdb.modify.names:cli_unify_water_labels"
metalflare-select-atoms = "metalflare.pdb.select:cli_select_atoms"
metalflare-center = "metalflare.pdb.modify.positioning:cli_center_structure"
metalflare-minimize-box = "metalflare.pdb.modify.orientation:cli_minimize_box"
metalflare-rename-resname = "metalflare.pdb.modify.names:cli_replace_resnames"
metalflare-merge-pdbs = "metalflare.pdb.utils:cli_merge_pdbs"
metalflare-validate-context = "metalflare.simulation.contexts:cli_validate_yaml_context"
metalflare-inspect-vmd = "metalflare.simulation.inspect:cli_vmd_inspect"
metalflare-tleap = "metalflare.simulation.amber.tleap:cli_run_tleap"
metalflare-prep-sims = "metalflare.simulation.run:cli_run_simulation_slurm_prep"
metalflare-pdb = "metalflare.pdb.utils:cli_write_pdb"
metalflare-pdb-align = "metalflare.pdb.utils:cli_align_pdb"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
material-plausible-plugin = "^0.2.0"
pymdown-extensions = "^10.3.1"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-glightbox = "^0.3.6"
mkdocs-macros-plugin = "^1.0.5"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pylint = "^3.0.1"
mypy = "^1.6.0"
mypy-extensions = "^1.0.0"
bump-my-version = "^0.11.0"
poetry-dynamic-versioning = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.1"
pytest-html = "^4.0.1"
colorama = "^0.4.6"

[tool.bumpversion]
current_version = "2023.10.29"
tag = true
commit = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.poetry-dynamic-versioning.substitution]
patterns = [
    "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])",
]
folders = [
    { path = "metalflare" },
]

[tool.pylint.messages_control]
good-names = [
    "i",
    "j",
    "e",
    "ex",
]
ignore = [
    "CVS",
    "_version.py",
    "conf.py",
]

[tool.black]
target-version = [
    "py311",
]
line-length = 88
color = true
exclude = "/(\n    \\.git\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n    | env\n    | venv\n)/\n"

[tool.isort]
py_version = 311
line_length = 88
known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = "3.11"
exclude = [
    "public/",
]
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
norecursedirs = [
    "hooks",
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

["tool.poetry.group.conda.dependencies"]
annotated-types = "^0.6.0"
appdirs = "^1.4.4"
Brotli = "^1.0.9"
build = "^1.2.1"
CacheControl = "^0.14.0"
cachy = "^0.3.0"
certifi = "^2024.7.4"
cffi = "^1.16.0"
charset-normalizer = "^2.0.4"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.2"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^2.5.6"
conda_poetry_liaison = "^0.1.2"
contourpy = "^1.2.1"
crashtest = "^0.4.1"
cryptography = "^42.0.5"
cycler = "^0.12.1"
distlib = "^0.3.8"
dulwich = "^0.21.7"
edgembar = "^0.2"
ensureconda = "^1.4.4"
fastjsonschema = "^2.20.0"
filelock = "^3.13.1"
fonttools = "^4.53.1"
gitdb = "^4.0.7"
GitPython = "^3.1.43"
html5lib = "^1.1"
idna = "^3.7"
importlib-metadata = "^7.0.1"
installer = "^0.7.0"
"jaraco.classes" = "^3.2.1"
jeepney = "^0.7.1"
Jinja2 = "^3.1.4"
joblib = "^1.4.2"
keyring = "^24.3.1"
kiwisolver = "^1.4.5"
MarkupSafe = "^2.1.3"
matplotlib = "^3.8.4"
"MMPBSA.py" = "^16.0"
more-itertools = "^10.1.0"
msgpack = "^1.0.3"
munkres = "^1.1.4"
ndfes = "^1.8"
numpy = "^1.26.4"
packaging = "^24.1"
packmol_memgen = "^2024.2.9"
pandas = "^2.2.2"
ParmEd = "^4.2.2"
pastel = "^0.2.1"
pdb4amber = "^22.0"
pexpect = "^4.9.0"
pillow = "^10.4.0"
pip = "^24.0"
pkginfo = "^1.10.0"
platformdirs = "^3.10.0"
poetry = "^1.8.3"
poetry-core = "^1.9.0"
poetry-plugin-export = "^1.8.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^2.5.3"
pydantic_core = "^2.14.6"
pylev = "^1.3.0"
pyMSMT = "^22.0"
pyOpenSSL = "^24.0.0"
pyparsing = "^3.1.2"
pyproject_hooks = "^1.1.0"
PySocks = "^1.7.1"
python-dateutil = "^2.9.0"
pytraj = "^2.0.6"
pytz = "^2024.1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.5.2"
requests = "^2.32.2"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.17.21"
sander = "^22.0"
scipy = "^1.14.0"
SecretStorage = "^3.3.1"
setuptools = "^69.5.1"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^4.0.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.13.0"
toolz = "^0.12.0"
trove-classifiers = "^2024.7.2"
typing_extensions = "^4.11.0"
tzdata = "^2024.1"
urllib3 = "^1.26.19"
virtualenv = "^20.26.1"
webencodings = "^0.5.1"
wheel = "^0.43.0"
zipp = "^3.17.0"
