[project]
name = "metalflare"
version = "2025.5.29"
description = "Investigating metal-sensing green fluorescent protein"
authors = [
    {name = "OASCI", email = "us@oasci.org"}
]
maintainers = [
    {name = "Alex Maldonado", email = "alex@oasci.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "mdanalysis>=2.6.1",
    "pdb2pqr>=3.6.2",
    "jinja2>=3.1.2",
    "zarr>=2.16.1",
    "seaborn>=0.13.1",
    "ray>=2.32.0",
    "pymoo>=0.6.1.1",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.5",
    "ipykernel>=6.29.3",
    "netcdf4>=1.6.5",
    "jupyterlab>=4.2.2",
    "xgboost>=2.1.1",
    "ruamel.yaml>=0.18.6,<0.19"
]

[project.scripts]
metalflare-filter-pdb = "metalflare.pdb.utils:cli_filter_pdb"
metalflare-unify-resids = "metalflare.pdb.modify.numbering:cli_unify_resids"
metalflare-unify-waters = "metalflare.pdb.modify.names:cli_unify_water_labels"
metalflare-select-atoms = "metalflare.pdb.select:cli_select_atoms"
metalflare-center = "metalflare.pdb.modify.positioning:cli_center_structure"
metalflare-minimize-box = "metalflare.pdb.modify.orientation:cli_minimize_box"
metalflare-rename-resname = "metalflare.pdb.modify.names:cli_replace_resnames"
metalflare-merge-pdbs = "metalflare.pdb.utils:cli_merge_pdbs"
metalflare-validate-context = "metalflare.simulation.contexts:cli_validate_yaml_context"
metalflare-inspect-vmd = "metalflare.simulation.inspect:cli_vmd_inspect"
metalflare-tleap = "metalflare.simulation.amber.tleap:cli_run_tleap"
metalflare-prep-sims = "metalflare.simulation.run:cli_run_simulation_slurm_prep"
metalflare-pdb = "metalflare.pdb.utils:cli_write_pdb"
metalflare-pdb-align = "metalflare.pdb.utils:cli_align_pdb"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["metalflare*"]
